--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: '3.8'
 services:
+  db:
+    container_name: business_db
+    image: postgres:15-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    ports:  
+      - "5432:5432" 
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=business
   rabbitmq:
     image: rabbitmq:3-management
 
@@ -15,8 +28,7 @@ services:
       RABBITMQ_DEFAULT_USER: 'user'
       RABBITMQ_DEFAULT_PASS: 'password'
 
-
-
 volumes:
+  postgres_data:
   rabbitmq_data:
     driver: local
